--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
-  <section class="bg-color">
+  <section class="bg-color" data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">>
     <header>
       <div class="container">
         <nav class="d-flex align-items-center justify-content-between">
@@ -59,7 +62,9 @@
     </div>
   </section>
   <!-- ----------------------section-two------------------------ -->
-  <section>
+  <section data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">>
     <div class="container">
       <div class="row">
         <div class="section-two-heading-box d-flex align-items-center justify-content-center gap-4 pt-105">
@@ -109,7 +114,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 col-12 mt-md-3">
+            <div class="col-lg-4 col-md-6 col-12 mt-md-3 mt-sm-5">
               <div class="border-box p-4">
                 <div class="d-flex justify-content-between">
                   <img src="./assets/images/web-design.png" alt="ux">
@@ -123,7 +128,7 @@
             </div>
 
 
-            <div class="col-lg-4 col-md-6 col-12 mt-md-3">
+            <div class="col-lg-4 col-md-6 col-12 mt-md-3 mt-sm-5">
               <div class="border-box p-4">
                 <div class="d-flex justify-content-between">
                   <img src="./assets/images/mobile-development.png" alt="ux">
@@ -136,7 +141,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 col-12 mt-md-3">
+            <div class="col-lg-4 col-md-6 col-12 mt-md-3 mt-sm-5">
               <div class="border-box p-4">
                 <div class="d-flex justify-content-between">
                   <img src="./assets/images/digital-marketing.png" alt="ux">
@@ -155,9 +160,51 @@
 
     </div>
   </section>
+  <!-- ----------------section-three---------------------- -->
+  <section class="bg-color mt-120" data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-12">
+          <div class="d-flex gap-3">
+            <p class="fs-16 oranange font-weight-normal pt-120">About Us</p>
+            <div class="orange-line mt-130"></div>
+          </div>
+          <h3 class="font-weight-semibold fs-39 dark-grey pt-3">Grow Your Business With
+            Our Agency</h3>
+            <p class="section-threee-loremtext fs-16 light-grey pt-3 pb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Convallis arcu in tincidunt sed imperdiet etiam fames. Tincidunt augue risus mattis eget sem habitant id ultrices augue. Sit rhoncus .</p>
+            <label class="containerfor-input">
+              <input type="checkbox" checked="checked">
+              <span class="checkmark"></span>
+             <span class="fs-16 font-weight-normal dark-grey "> Innovative website design</span>
+            </label>
+              <label class="containerfor-input">
+              <input type="checkbox" checked="checked">
+              <span class="checkmark"></span>
+              <span class="fs-16 font-weight-normal dark-grey"> UI/UX design with global trends</span>
+            </label>
+              <label class="containerfor-input">
+              <input type="checkbox" checked="checked">
+              <span class="checkmark"></span>
+              <span class="fs-16 font-weight-normal dark-grey pb-140">Web and email hosting service</span> 
+            </label>
+        </div>
+        <div class="col-lg-6 col-md-6 col-12">
+          <img src="./assets/images/pana.png" alt="traders" class="w-100 pt-129 pb-119">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- ---------------------------img-section------------------------------ -->
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+  AOS.init();
+</script>
   <script src="./assets/js/app.js"></script>
 </body>
 
