remove-extra-padding

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
      data-aos-duration="2000">>
     <header>
       <div class="container">
-        <nav class="d-flex align-items-center justify-content-between">
-          <h2 class="logo-name oranange pt-4 cursor">
+        <nav class="d-flex align-items-center justify-content-between mb-0">
+          <h2 class="logo-name oranange  cursor">
             Digi<span class="black">ency</span>
           </h2>
           <div onclick="navmenu()" class="d-lg-none w-35 h-35  d-flex flex-column z-2">
@@ -29,13 +29,13 @@
             <span id="rotated-2" class="line1 "></span>
           </div>
 
-          <ul id="navlinks" class="d-flex align-items-center m-0 p-0  justify-content-center gap-4 pt-4 nav-menubar">
+          <ul id="navlinks" class="d-flex align-items-center m-0 p-0  justify-content-center gap-4  nav-menubar">
             <li><a href="/" class="dark-grey nav-links font-weight-medium fs-20 ">Home</a></li>
             <li><a href="/" class="dark-grey nav-links font-weight-medium fs-20 ">About Us</a></li>
             <li><a href="/" class="dark-grey nav-links font-weight-medium fs-20 ">Services</a></li>
             <li><a href="/" class="dark-grey nav-links font-weight-medium fs-20 ">Portfolio</a></li>
             <li><a href="/" class="dark-grey nav-links font-weight-medium fs-20 ">Blog</a></li>
-            <li><a href="/" class="dark-grey nav-links font-weight-medium fs-20 ">Contact Us</a></li>
+            <li><a href="/" class="dark-grey nav-links font-weight-medium fs-20 mt-0 ">Contact Us</a></li>
             <li> <button class="nav-btn ms-4 mt-2 fs-20 dark-grey ">Let’s Talk</button></li>
           </ul>
 
